<resources>
    <string name="app_name">Battmobile Warehouse</string>
    <string name="email_hint">Write your Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="your_password">Your Password</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_hint">Your mobile (will verify in next step)</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email_field_empty">Email field cannot be blank</string>
    <string name="password_field_hint">Password cannot be blank</string>
    <string name="name_error">First Name cannot be blank</string>
    <string name="last_name_error">Last Name cannot be blank</string>
    <string name="name_length_error">First Name should be more then 3 characters</string>
    <string name="last_name_length_error">Last name should be more then 3 characters</string>
    <string name="email_error">Invalid email</string>
    <string name="repeat_passowrd_mismatch">Repeat password mismatch</string>
    <string name="repeat_password_error">Repeat password cannot be blank</string>
    <string name="mobile_error">Mobile number cannot be empty</string>
    <string name="mobile_length_error">Mobile lenght should be 10</string>
    <string name="profile">Profile</string>
    <string name="jobs">Jobs</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="confirm_text"><![CDATA[Confirm your email & We\'ll \n send reset link]]></string>
    <string name="send_link">Send reset link</string>
    <string name="battery_stocks">Battery\nStock</string>
    <string name="products">Products</string>
    <string name="reports">Reports</string>
    <string name="scrap_batteries">Scrap\nBatteries</string>
    <string name="cash_in_hand">Cash\nin Hand</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_allow">allow permission</string>
    <string name="brands">Brands</string>
    <string name="supplier">Supplier</string>
</resources>
