<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/dim_120"
            android:layout_height="@dimen/dim_120"
            android:src="@drawable/passowrd" />

        <TextView
            android:id="@+id/text_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_forgot"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/confirm_text"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="@dimen/dim_12"
                android:hint="Type your Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/send"
            style="@style/Base.Widget.AppCompat.Button.GLOBAL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/send_link"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6BCDCDCD"
        android:clickable="true"
        android:translationZ="18dp"
        android:visibility="gone">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
