<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_108"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:padding="@dimen/dim_16">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/dim_50"
            android:layout_height="@dimen/dim_50"
            android:src="@drawable/profile_pic"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_16"
            android:layout_marginRight="@dimen/dim_16"
            android:layout_toLeftOf="@+id/img_menu"
            android:layout_toRightOf="@+id/profile_image"
            android:fontFamily="@font/poppins_regular"
            android:text="Sandeep Jangir"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dim_16"
            android:layout_marginTop="@dimen/dim_3"
            android:layout_marginRight="@dimen/dim_16"
            android:layout_toLeftOf="@+id/img_menu"
            android:layout_toRightOf="@+id/profile_image"
            android:fontFamily="@font/poppins_regular"
            android:text="sandep@techsbiz.com"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="@dimen/dim_24"
            android:layout_height="@dimen/dim_24"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_menu" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header"
        android:orientation="vertical"
        android:padding="@dimen/dim_16"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dim_16"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_stock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">


                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/battery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/battery_stocks"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_allocation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">

                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/allocation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/products"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dim_8"
            android:layout_marginBottom="@dimen/dim_8"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_report"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">


                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/reports"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_scrap"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">

                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/battery_cross" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/scrap_batteries"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dim_8"
            android:layout_marginBottom="@dimen/dim_8"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_supplier"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">

                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/supplier" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/supplier"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_brands"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">

                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/brand" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/brands"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dim_12"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_wallet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dim_8"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_16">


                <ImageView
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:src="@drawable/doller_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_16"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cash_in_hand"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>